# turbo_base64

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml  tests.yaml
benches/: bench.rs  decode.rs  encode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzzer.rs
fuzz/fuzzers/: decode_rand.rs  parity_with_base64.rs  roundtrip.rs
src/: lib.rs
