[package]
edition = "2024"
version = "0.1.0"
readme = "README.md"
name = "turbo_base64"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "encoding"]
repository = "https://github.com/frozen-lab/turbo_base64"
keywords = ["base64", "simd", "utf8", "encode", "no_std"]
description = "Hardware accelerated encoding and decoding of bytes or utf-8 using standard RFC 4648 base64 spec"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
additional-targets = ["i686-apple-darwin"]
targets = [
    "aarch64-apple-darwin",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false

[profile.profile]
debug = true
lto = "off"
strip = "none"
opt-level = 2
codegen-units = 1
inherits = "release"
overflow-checks = false
debug-assertions = false

[features]
nightly = []

[dev-dependencies.base64]
version = "0.22.1"

[dev-dependencies.rand]
version = "0.10.2"

[dev-dependencies.criterion]
version = "0.8.2"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
