[package]
name = "turbo_base64-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.base64]
version = "0.22.1"

[dependencies.turbo_base64]
path = ".."

[[bin]]
name = "decode_rand"
path = "fuzzers/decode_rand.rs"
test = false
doc = false
bench = false
